fix: whitespace after location-details__details

--- a/packages/map-template/src/components/LocationDetails/LocationDetails.scss
+++ b/packages/map-template/src/components/LocationDetails/LocationDetails.scss
@@ -6,7 +6,7 @@
     display: grid;
     height: 100%;
     overflow-y: hidden;
-    grid-template-rows: min-content min-content 1fr 64px;
+    grid-template-rows: auto auto 1fr auto;
 
     &--content-below {
         position: relative;
@@ -42,9 +42,15 @@
         gap: var(--spacing-medium);
         overflow-y: auto;
         margin-top: 0;
+        height: auto;
+        min-height: 0;
 
         > *:first-child {
             margin-top: var(--spacing-medium);
+        }
+
+        > *:last-child {
+            margin-bottom: 0;
         }
     }
 
